<resources>
    <string name="app_name">Russia 2018</string>
    <string name="russia">Russia 2018</string>
    <string name="russialogo">russialogo</string>
    <string name="pickyourteam">Pick Your Team</string>
    <string name="share">Share</string>
    <string name="applicationPath">https://play.google.com/store/apps/details?id=com.sport.malek.russia2018</string>
    <string name="appratemessage">please take a moment to rate it. Thanks for your support!</string>
    <string name="Rate">RATE </string>
    <string name="remind">REMIND ME LATER</string>
    <string name="nothanks">NO, THANKS</string>
    <string name="aboutdesc">World Cup application is an application that helps you to know the latest news and fixtures with the addition of information about the participating teams and stadiums .</string>
    <string name="selectlanguage">Select Language</string>
    <string name="appdeveloper">App Developer :</string>
    <string name="malek">Malek Jaber</string>
    <string name="release">Version :</string>
    <string name="play">Play</string>
    <string name="point">Point</string>
    <string name="matches">Matches</string>
    <string name="releasenumber">1.2</string>
    <string name="addunit">ca-app-pub-6570381802681746/9282100759</string>
    <string name="admobapp">ca-app-pub-6570381802681746~9273867051</string>
    <string name="downloadapp">For download Russia 2018 application Click on the following Link : </string>
    <string name="addunitinteristial">ca-app-pub-6570381802681746/3100616039</string>
    <string name="argentina">ARGENTINA</string>
    <string name="australia">AUSTRALIA</string>
    <string name="brazil">BRAZIL</string>
    <string name="belgium">BELGIUM</string>
    <string name="colombia">COLOMBIA</string>
    <string name="costarica">COSTA RICA</string>
    <string name="danmark">DENMARK</string>
    <string name="egypt">EGYPT</string>
    <string name="england">ENGLAND</string>
    <string name="france">FRANCE</string>
    <string name="germany">GERMANY</string>
    <string name="iran">IRAN</string>
    <string name="island">ICELAND</string>
    <string name="japan">JAPAN</string>
    <string name="coroatia">CROATIA</string>
    <string name="mexico">MEXICO</string>
    <string name="moroco">MOROCCO</string>
    <string name="nigeria">NIGERIA</string>
    <string name="panama">PANAMA</string>
    <string name="peru">PERU</string>
    <string name="poland">POLAND</string>
    <string name="portogal">PORTUGAL</string>
    <string name="russiaa">RUSSIA</string>
    <string name="saudi">Saudi Arabia</string>
    <string name="senegal">SENEGAL</string>
    <string name="serbia">SERBIA</string>
    <string name="southkora">South Korea</string>
    <string name="spain">SPAIN</string>
    <string name="sweden">SWEDEN</string>
    <string name="switzerland">Switzerland</string>
    <string name="tunisa">TUNISIA</string>
    <string name="uruguay">URUGUAY</string>
    <string name="title_activity_real_">real_Activity</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Home</string>
    <string name="home">Stadium</string>
    <string name="scores">Matches</string>
    <string name="news">Last News</string>
    <string name="table">Table</string>
    <string name="player">Matches of the day</string>
    <string name="informationteam">Information Team</string>
    <string name="more">More</string>
    <string name="setting">Setting</string>
    <string name="readmore">Read More</string>
    <string name="exit">Exit</string>
    <string name="stadium">Stadium</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed_group">tabbed_group</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed_group_team" translatable="false">tabbed_group_team</string>
    <string name="group1">Group A</string>
    <string name="group2">Group B</string>
    <string name="group3">Group C</string>
    <string name="group4">Group D</string>
    <string name="group5">Group E</string>
    <string name="group6">Group F</string>
    <string name="group7">Group G</string>
    <string name="group8">Group H</string>
    <string name="titlegroup">TABLE</string>
    <string name="title_activity_news_detail" translatable="false">NewsDetail</string>
    <string name="title_item_list" translatable="false">Items</string>
    <string name="title_item_detail" translatable="false">Item Detail</string>
    <string name="title_activity_list_detail" translatable="false">ListDetail</string>
    <string name="win_in_world_cup">World Cup Winner : </string>
    <string name="share_in_world_cup">Appearances in the world cup :</string>
    <string name="final_match">Reach the final match :</string>
    <string name="ranking">Fifa ranking position :</string>
    <string name="top_player">Top Players </string>
    <string name="nomatch">No Match Today !</string>
    <string name="information">Information</string>
    <string name="stadium_name">Stadium Name :</string>
    <string name="capacity">Capacity :</string>
    <string name="opening">Opening :</string>
    <string name="location">Location :</string>
    <string name="Luzhniki_Stadium">Luzhniki Stadium</string>
    <string name="luzhniki_capacity" translatable="false">80,000</string>
    <string name="luzhiniki_location">Moscow</string>
    <string name="luzhiniki_opening" translatable="false">1956</string>
    <string name="otkrytiye_stadium">Otkrytiye Arena</string>
    <string name="otkrytiye_capacity" translatable="false">45,360</string>
    <string name="otkrytiye_location">Moscow</string>
    <string name="otkrytiye_opening" translatable="false">2014</string>
    <string name="krestovsky_stadium">Krestovsky Stadium</string>
    <string name="krestovsky_capacity" translatable="false">67,000</string>
    <string name="krestovsky_location">Saint Petersburg</string>
    <string name="krestovsky_opening" translatable="false">2017</string>
    <string name="kaliningrad_stadium">Kaliningrad Stadium</string>
    <string name="kaliningrad_capacity" translatable="false">35,212</string>
    <string name="kaliningrad_location">Kaliningrad</string>
    <string name="kaliningrad_opening" translatable="false">2017</string>
    <string name="kazan_stadium">Kazan Arena</string>
    <string name="kazan_capacity" translatable="false">45,000</string>
    <string name="kazan_location">Kazan</string>
    <string name="kazan_opening" translatable="false">2013</string>
    <string name="nizhny_stadium">Nizhny Novgorod Stadium</string>
    <string name="nizhny_capacity" translatable="false">45,000</string>
    <string name="nizhny_location">Nizhny Novgorod</string>
    <string name="nizhny_opening" translatable="false">2017</string>
    <string name="cosmos_stadium">Cosmos Arena</string>
    <string name="cosmos_capacity" translatable="false">45,000</string>
    <string name="cosmos_location">Samara</string>
    <string name="cosmos_opening" translatable="false">2017</string>
    <string name="volgograd_stadium">Volgograd Arena</string>
    <string name="volgograd_capacity" translatable="false">45,000</string>
    <string name="volgograd_location">Volgograd</string>
    <string name="volgograd_opening" translatable="false">2017</string>
    <string name="mordovia_stadium">Mordovia Arena</string>
    <string name="mordovia_capacity" translatable="false">45,000</string>
    <string name="mordovia_location">Saransk</string>
    <string name="mordovia_opening" translatable="false">2017</string>
    <string name="rostov_stadium">Rostov Arena</string>
    <string name="rostov_capacity" translatable="false">45,000</string>
    <string name="rostov_location">Rostov-on-Don</string>
    <string name="rostov_opening" translatable="false">2017</string>
    <string name="fisht_stadium">Fisht Olympic Stadium</string>
    <string name="fisht_capacity" translatable="false">48,000</string>
    <string name="fisht_location">Sochi</string>
    <string name="fisht_opening" translatable="false">2013</string>
    <string name="ekaterinburg_stadium">Ekaterinburg Arena</string>
    <string name="ekaterinburg_capacity" translatable="false">45,000</string>
    <string name="ekaterinburg_location">Ekaterinburg</string>
    <string name="ekaterinburg_opening" translatable="false">2017</string>
    <string name="arg_description">
 "has appeared in five World Cup finals, including the first final in 1930, which they lost 4–2 to Uruguay.  \n \n"
    " Argentina won in their next final appearance in 1978, beating the Netherlands at extra time, 3–1. \n \n"
    " Argentina, led by Diego Maradona won again in 1986, a 3–2 victory over West Germany. \n"
     "They again made the World Cup finals in 1990,"
    " and lost 1–0 to West Germany following a controversial penalty call in the 87th minute. Argentina,"
     "led by Lionel Messi made their fifth appearance in a World Cup final in 2014, again losing to Germany"
     ", 1–0 during extra-time.\n \n"
     "Argentina's World Cup winning managers are César Luis Menotti in 1978,"
     "and Carlos Bilardo in 1986 ."
 </string>
    <string name="arg_players">
    " - Lionel Messi \n"
    "- Deigo Maradona \n"
    "- Requilme \n"
    "- Gabrial Batistuta \n"
    "- Claudio Caniggia"
</string>
    <string name="bra_description">
        "Brazil is the most successful national team in the FIFA World Cup, the main football international competition, being crowned winner five times: 1958, 1962, 1970, 1994 and 2002. Brazil also has the best overall performance in the World Cup, both in proportional and absolute terms, with a record of 70 victories in 104 matches played, 119 goal difference, 227 points, and 17 losses. Brazil is the only national team to have played in all World Cup editions without any absence nor need for playoffs. The seleção is likewise the most successful national team in the FIFA Confederations Cup with four titles: 1997, 2005, 2009 and 2013. \n \n"
        "In relation to ranking standings Brazil fare well, having the all-time highest average football Elo Rating, and the third all time highest football Elo Rating established in 1962, only behind the Hungary Golden Team of 1954 and the German team of 2014. Many commentators, experts and former players have considered the Brazil team of 1970 to be the greatest football team ever; while other Brazilian teams are also highly estimated and regularly appear listed among the best teams of all time, such as the Brazil teams of 1958-62, with honorary mentions for the gifted 1982 side.\n \n"
        "Brazil is the only national team to have won the World Cup on four different continents: once in Europe (1958 Sweden), once in South America (1962 Chile), twice in North America (1970 Mexico and 1994 United States) and once in Asia (2002 Korea/Japan). They share with France, Argentina and Germany the feat to have won the three most important men's football titles recognized by FIFA: the World Cup, the Confederations Cup, and the Olympic tournament. They also share with Spain a record of 35 consecutive matches undefeated. A common quip about football is: "Os ingleses o inventaram, os brasileiros o aperfeiçoaram" (The English invented it, the Brazilians perfected it)."
    </string>
</resources>