<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news"
            />
        <item
            android:id="@+id/nav_Score"
            android:icon="@drawable/ic_score"
            android:title="@string/scores" />

        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_table_24dp"
            android:title="@string/table" />
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_player"
            android:title="@string/player"
            />

        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_information"
            android:title="@string/informationteam" />

    </group>

    <item android:title="@string/more">
        <menu>

            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_"
                android:title="@string/about" />


            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/exit" />
        </menu>

    </item>

</menu>
