<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.sport.malek.russia2018.tabbed_group_team">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:background="@drawable/side_nav_bar"
        android:theme="@style/AppTheme.AppBarOverlay"

        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@drawable/side_nav_bar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/titlegroup">
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            app:tabMode="scrollable"
            android:layout_height="match_parent">

            <android.support.design.widget.TabItem
                android:id="@+id/group1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group1" />

            <android.support.design.widget.TabItem
                android:id="@+id/group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group2" />

            <android.support.design.widget.TabItem
                android:id="@+id/group3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group3" />

            <android.support.design.widget.TabItem
                android:id="@+id/group4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group4" />

            <android.support.design.widget.TabItem
                android:id="@+id/group5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group5" />

            <android.support.design.widget.TabItem
                android:id="@+id/group6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group6" />

            <android.support.design.widget.TabItem
                android:id="@+id/group7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group7" />

            <android.support.design.widget.TabItem
                android:id="@+id/group8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group8" />
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_scrollFlags="scroll|enterAlways"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/addunit">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
