<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sport.malek.russia2018.SettingFragment">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/settingPictyourteam"
        android:gravity="center_vertical"
        android:text="@string/pickyourteam"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="serif"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/settingShare"
        android:gravity="center_vertical"
        android:text="@string/share"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="serif"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/settingabout"
        android:gravity="center_vertical"
        android:fontFamily="serif"
        android:text="@string/about"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>



</LinearLayout>
