<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#352de6"
    android:id="@+id/stadiumdesign"
    android:layout_height="450dp">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Stadium Number1"
        android:background="@drawable/side_nav_bar"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:id="@+id/textheaderStadium"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/arg"
        android:scaleType="centerCrop"
        android:id="@+id/imageStadium"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/stadium_name"
        android:textColor="#ffffff"
        android:textSize="18dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:text="Santiago Bernabue"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:id="@+id/stadium_name_text"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/capacity"
            android:textColor="#ffffff"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/stadium_capacity_text"
            android:gravity="start"
            android:text="180,000 human"
            android:textColor="#ffffff"
            android:textSize="18dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/location"
            android:textColor="#ffffff"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/stadium_location_text"
            android:gravity="start"
            android:text="Moscow"
            android:textColor="#ffffff"
            android:textSize="18dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/opening"
            android:textColor="#ffffff"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/stadium_opening_text"
            android:gravity="start"
            android:text="2017"
            android:textColor="#ffffff"
            android:textSize="18dp"
            />


    </LinearLayout>


</LinearLayout>
